results/SVCOMP/houdini/log-StringCompare02-2024_03_19_04_56_51.txt
public class StringCompare02 {
  //@ non_null
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (case sensitive)
    return s3.regionMatches(0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


/home/max/Documents/JMLGPT/tmp/StringCompare02.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringCompare02 {
  //@ non_null
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (case sensitive)
    return s3.regionMatches(0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


/home/max/Documents/JMLGPT/tmp/StringCompare02.java:2: error: No modifiers are allowed prior to a lightweight specification case
  //@ non_null
      ^
1 error

public class StringCompare02 {
  //@ ensures \result;
  //@ ensures !\result;
  //@ ensures s3 == null ==> \result;
  //@ ensures s3 == null ==> !\result;
  //@ ensures s3 != null ==> \result;
  //@ ensures s3 != null ==> !\result;
  //@ ensures s4 == null ==> \result;
  //@ ensures s4 == null ==> !\result;
  //@ ensures s4 != null ==> \result;
  //@ ensures s4 != null ==> !\result;
  public static boolean f(String s3, String s4) {
    // test regionMatches (case sensitive)
    return s3.regionMatches(0, s4, 0, 5);
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f("#$%^&*123", "#$%^&*123");
    f("#$%^#*123", "#$%^#*123");
    f("fsgdhj", "fsgdhj");
    f("fsgdhj", "fsadhj");
    f("DiffBlue L1mitted", "DiffBlue L1mitted");
    f("DiffBlue Limitted", "DiffBlue L1mitted");
    f("HiiffblTe Limited", "");
  }
}


OpenJML not responding. Aborted.
